# cutoff-time-architecture

./: LICENSE  README.md  Untitled-3.txt  index.html  network-architecture.md
adr/: ADR-001-technology-choice.md
cutoff-api/: .env.example  .gitignore  .pre-commit-config.yaml  DEMO-STATUS.md  DEMO-SUMMARY.md  DEMO.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  manifest.yml  pyproject.toml  start-demo.bat  start-demo.sh
cutoff-api/app/: __init__.py  config.py  dependencies.py  main.py
cutoff-api/app/api/v1/: router.py
cutoff-api/app/api/v1/endpoints/: __init__.py  capacity.py  cutoff.py  demo.py  health.py  simulate.py  status.py
cutoff-api/app/core/: __init__.py  auth.py  cache.py  logging.py  metrics.py
cutoff-api/app/models/: __init__.py  domain.py  requests.py  responses.py
cutoff-api/app/repositories/: __init__.py  cache_repository.py  hana_repository.py  mock_hana_data.py
cutoff-api/app/services/: __init__.py  capacity_service.py  decision_engine.py  workload_calculator.py
cutoff-api/docs/: DEMO-PRESENTATION-GUIDE.md  POWERPOINT-PRESENTATION.md
cutoff-api/monitoring/: prometheus.yml
cutoff-api/static/: demo.html
cutoff-api/tests/: __init__.py  conftest.py
cutoff-api/tests/unit/: test_decision_engine.py
docs/: 01-executive-summary.md  02-architecture.md  03-algorithm.md  04-data-model.md  05-api-specification.md  06-implementation-plan.md
